--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,103 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mercado Liebre Argentina</title>
+  <!-- Font Awesome Stylesheet -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+  <!-- Bootstrap Grid Stylesheet -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <!-- Own Stylesheet -->
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <style>
+    header {
+      background-color: #EAC926;
+      height: 200px;
+    }
+    .first {
+      height: 60%;
+    }
+    #imagen {
+      width: 100%;
+      height: auto;
+      padding-right: 0px;
+      padding-left: 0px;
+    }
+
+    section {
+      background-color: tomato;
+      height: auto;
+    }
+
+    .tipe-article {
+      background-color: grey;
+      height: 80px;
+    }
+
+    article {
+      height: 400px;
+      width: 100%;
+      background-color: khaki;
+    }
+
+    footer {
+      background-color: turquoise;
+      height: 500px;
+    }
+
+    @media (min-width: 480px; ) {
+      article {
+        width: 95%;
+      }
+    }
+
+    @media (min-width: 768px; ) {
+
+    }
+  </style>
+</head>
+
+<body>
+  <div id="contenedor" class="container-fluid">
+    <header class="row">
+      <div class="first col-12">
+
+      </div>
+      <div class="col-12">
+        <img id="imagen"  src="/images/img-home-banner.jpg" alt="">
+      </div>
+    </header>
+    <section class="row">
+      <div class="tipe-article col-12"></div>
+      <article class="col-12 col-sm-6 col-md-3"></article>
+      <article class="col-12 col-sm-6 col-md-3"></article>
+      <article class="col-12 col-sm-6 col-md-3"></article>
+      <article class="col-12 col-sm-6 col-md-3"></article>
+      <div class="tipe-article col-12"></div>
+      <article class="col-12 col-sm-6 col-md-3"></article>
+      <article class="col-12 col-sm-6 col-md-3"></article>
+      <article class="col-12 col-sm-6 col-md-3"></article>
+      <article class="col-12 col-sm-6 col-md-3"></article>
+    </section>
+    <footer class="row">
+
+    </footer>
+  </div>
+
+
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
