--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,34 +13,188 @@
   <!-- Own Stylesheet -->
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .contenedor {
+      background-color: red;
+    }
+
     header {
       background-color: #EAC926;
       height: 200px;
     }
+
     .first {
+      height: 65%;
+      margin-left: 0px;
+      margin-right: 0px;
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+
+    .first-up {
+      height: 60%;
+      margin-left: 0px;
+      margin-right: 0px;
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+
+    .logo-box {
       height: 60%;
     }
+
+    .logo-img {
+      width: 100%;
+      height: 100%;
+    }
+
+    .search-box {
+      height: 60%;
+    }
+
+    .form {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .search-bar-box {
+      height: auto;
+      width: auto;
+      position: relative;
+    }
+
+    .search-bar {
+      width: 170px;
+      border: 0.5px solid #ebebeb;
+      font-size: 12px;
+      height: 32px;
+      border-radius: 4px;
+    }
+
+    .search-bar:hover {
+      outline: none;
+    }
+
+    .search-bar:focus {
+      outline: none;
+    }
+
+    .search-button {
+      background-color: white;
+      border: none;
+      position: absolute;
+      left: 82%;
+      top: 19%;
+      height: 22px;
+      display: flex;
+      align-items: center;
+      border-left: 0.5px solid #ebebeb;
+      width: 30px;
+    }
+
+    .fa-search {
+      color: #666666;
+      background-color: white;
+      font-size: 12px;
+    }
+
+    .fa-hand-holding-usd {
+      font-size: 17px;
+    }
+
+    .desc-box {
+      height: 40%;
+      text-align: center;
+    }
+
+    .desc-text {
+      font-size: 14px;
+    }
+
+    .first-down {
+      height: 40%;
+      margin-left: 0px;
+      margin-right: 0px;
+      padding-left: 0px;
+      padding-right: 0px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .nav-bar-box {
+      display: none;
+    }
+
+    .menu {
+      width: auto;
+      height: auto;
+      padding: 3px 18px 3px 18px;
+      background-color: #03264C;
+      border-radius: 5px;
+    }
+
+    .fa-bars {
+      color: white;
+    }
+
+    .img-box {
+      padding-right: 0px;
+      padding-left: 0px;
+      height: 35%;
+    }
+
     #imagen {
       width: 100%;
       height: auto;
-      padding-right: 0px;
-      padding-left: 0px;
     }
 
     section {
-      background-color: tomato;
       height: auto;
+      background-color: #ebebeb;
     }
 
     .tipe-article {
-      background-color: grey;
       height: 80px;
+      display: flex;
+      align-items: center;
+      margin-left: 4px;
+    }
+
+    .text-tipe-article {
+      color: #666666;
+    }
+
+    .article-box {
+      height: 1800px;
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
     }
 
     article {
-      height: 400px;
+      height: 420px;
+      width: 90%;
+      background-color: white;
+      border-radius: 10px;
+    }
+
+    .img-articles {
       width: 100%;
-      background-color: khaki;
+      height: auto;
+      border-bottom: 1px solid #ebebeb;
+      padding-top: 10px;
     }
 
     footer {
@@ -48,14 +202,185 @@
       height: 500px;
     }
 
-    @media (min-width: 480px; ) {
+    @media (min-width: 480px) {
       article {
         width: 95%;
       }
+
+      .first {
+        height: 50%;
+      }
+
+      .search-bar {
+        width: 270px;
+      }
+
+      .img-box {
+        height: 50%;
+      }
     }
 
-    @media (min-width: 768px; ) {
+    @media (min-width: 768px) {
+      header {
+        height: 250px;
+      }
 
+      .first {
+        height: 37%;
+      }
+
+      .logo-box {
+        height: 100%;
+      }
+
+      .search-box {
+        height: 100%;
+      }
+
+      .desc-box {
+        height: 100%;
+        margin-top: 5px;
+      }
+
+      .search-bar {
+        width: 288px;
+      }
+
+      .search-button {
+        left: 255px;
+      }
+
+      .desc-text {
+        font-size: 16px;
+      }
+
+      .menu {
+        display: none;
+      }
+
+      .nav-bar-box {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-top: 4px;
+        font-size: 14px;
+      }
+
+      .nav-bar {
+        width: 48%;
+      }
+
+      .nav-bar ul {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+      }
+
+      .nav-bar ul li {
+        display: inline;
+      }
+
+      .img-box {
+        height: 63%;
+      }
+
+      .article-box {
+        height: 900px;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+      }
+
+      article {
+        width: 45%;
+      }
+
+    }
+
+    @media (min-width: 1024px) {
+      header {
+        height: 320px;
+      }
+
+      .first {
+        height: 32%;
+      }
+
+      .logo-img {
+        margin-top: 5px;
+      }
+
+      .search-button {
+        left: 400px;
+      }
+
+      .search-bar-box {
+        margin-left: 30px;
+      }
+
+      .search-bar {
+        width: 435px;
+      }
+
+      .desc-box {
+        padding-top: 10px;
+      }
+
+      .desc-text {
+        font-size: 16px;
+      }
+
+      .nav-bar-box {
+        justify-content: space-between;
+        margin-top: 7px;
+      }
+
+      .nav-bar {
+        width: 37%;
+      }
+
+      .nav-bar ul {
+        justify-content: space-around;
+      }
+
+      .img-box {
+        height: 68%;
+      }
+
+      .article-box {
+        height: 280px;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+      }
+
+      article {
+        height: 280;
+        width: 22%;
+      }
+    }
+
+    @media (min-width: 1280px) {
+      header {
+        height: 393px;
+      }
+    }
+
+    @media (min-width: 1440px) {
+      header {
+        height: 450px;
+      }
     }
   </style>
 </head>
@@ -63,24 +388,98 @@
 <body>
   <div id="contenedor" class="container-fluid">
     <header class="row">
-      <div class="first col-12">
-
+      <div class="row first col-12">
+        <div class="row col-12 first-up">
+          <div class="logo-box col-5 col-md-3 col-lg-3">
+            <img class="logo-img" src="/images/logo-mercado-liebre.svg" alt="">
+          </div>
+          <div class="search-box col-7 col-md-5 col-lg-5">
+            <form class="form" action="">
+              <div class="search-bar-box">
+                <input class="search-bar" type="text" placeholder="Buscar productos, marcas y más">
+                <button class="search-button" type="submit">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
+            </form>
+          </div>
+          <div class="desc-box col-12 col-md-4 col-lg-4">
+            <i class="fas fa-hand-holding-usd"></i><span class="desc-text"> Comprá en cuotas y sin tarjeta de
+              crédito</span>
+          </div>
+        </div>
+        <div class="first-down col-12">
+          <div class="menu">
+            <i class="fas fa-bars"></i>
+          </div>
+          <div class="nav-bar-box">
+            <div class="nav-bar">
+              <ul>
+                <li>Ofertas</li>
+                <li>Tiendas Oficiales</li>
+                <li>Vender</li>
+                <li>Ayuda</li>
+              </ul>
+            </div>
+            <div class="nav-bar">
+              <ul>
+                <li><span>Creá tu cuenta </span><i class="far fa-address-card"></i></li>
+                <li><span>Ingresá </span><i class="fas fa-sign-in-alt"></i></li>
+                <li><span>Mis compras </span><i class="fas fa-shopping-basket"></i></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-12">
-        <img id="imagen"  src="/images/img-home-banner.jpg" alt="">
+      <div class="img-box col-12">
+        <img id="imagen" src="/images/img-home-banner.jpg" alt="">
       </div>
     </header>
     <section class="row">
-      <div class="tipe-article col-12"></div>
-      <article class="col-12 col-sm-6 col-md-3"></article>
-      <article class="col-12 col-sm-6 col-md-3"></article>
-      <article class="col-12 col-sm-6 col-md-3"></article>
-      <article class="col-12 col-sm-6 col-md-3"></article>
-      <div class="tipe-article col-12"></div>
-      <article class="col-12 col-sm-6 col-md-3"></article>
-      <article class="col-12 col-sm-6 col-md-3"></article>
-      <article class="col-12 col-sm-6 col-md-3"></article>
-      <article class="col-12 col-sm-6 col-md-3"></article>
+      <div class="tipe-article col-12">
+        <span class="text-tipe-article">Basado en tu última visita</span>
+      </div>
+      <div class="article-box">
+        <article>
+          <img class="img-articles" src="images/img-cafetera-moulinex.jpg" alt="">
+          <span class="price">$34.900</span><span class="off">40% OFF</span><span><i class="fas fa-truck"></i></span>
+        </article>
+        <article>
+          <img class="img-articles" src="images/img-macbook-pro-2019.jpg" alt="">
+          <span class="price">$90.756</span><span class="off">10% OFF</span><span><i class="fas fa-truck"></i></span>
+        </article>
+        <article>
+          <img class="img-articles" src="images/img-tv-samsung-smart.jpg" alt="">
+          <span class="price">$45.700</span><span><i class="fas fa-truck"></i></span>
+        </article>
+        <article>
+          <img class="img-articles" src="images/img-samsung-galaxy-s10.jpg" alt="">
+          <span class="price">$9.500</span><span class="off">35% OFF</span><span><i class="fas fa-truck"></i></span>
+        </article>
+      </div>
+      <div class="tipe-article col-12">
+        <span class="text-tipe-article">Ofertas</span>
+      </div>
+      <div class="article-box">
+        <article>
+          <img class="img-articles" src="images/img-cafetera-moulinex.jpg" alt="">
+          <div class="text-img-box">
+            <span class="price">$34.900</span><span class="off">40% OFF</span><span><i class="fas fa-truck"></i></span>
+          </div>
+        </article>
+        <article>
+          <img class="img-articles" src="images/img-macbook-pro-2019.jpg" alt="">
+          <span class="price">$90.756</span><span class="off">10% OFF</span><span><i class="fas fa-truck"></i></span>
+        </article>
+        <article>
+          <img class="img-articles" src="images/img-tv-samsung-smart.jpg" alt="">
+          <span class="price">$45.700</span><span><i class="fas fa-truck"></i></span>
+        </article>
+        <article>
+          <img class="img-articles" src="images/img-samsung-galaxy-s10.jpg" alt="">
+          <span class="price">$9.500</span><span class="off">35% OFF</span><span><i class="fas fa-truck"></i></span>
+        </article>
+      </div>
     </section>
     <footer class="row">
 
